net/mlx5: Add RoCE RX ICRC encapsulated counter (bsc#1171118).

--- a/series.conf
+++ b/series.conf
@@ -19123,6 +19123,7 @@
 	patches.suse/s390-sles15sp1-00-12-22-net-smc-use-DECLARE_BITMAP-for-rtokens_used_mask.patch
 	patches.suse/s390-sles15sp1-00-12-23-net-smc-remove-local-variable-page-in-smc_rx_splice.patch
 	patches.suse/wan-fsl_ucc_hdlc-use-IS_ERR_VALUE-to-check-return-va.patch
+	patches.suse/net-mlx5-Add-RoCE-RX-ICRC-encapsulated-counter.patch
 	patches.suse/0001-net-mlx5-fix-uaccess-beyond-count-in-debugfs-read-wr.patch
 	patches.suse/brcmsmac-fix-wrap-around-in-conversion-from-constant
 	patches.suse/rndis_wlan-potential-buffer-overflow-in-rndis_wlan_a
