net/mlx5: Add new fields to Port Type and Speed register (bsc#1171118).

--- a/series.conf
+++ b/series.conf
@@ -22788,6 +22788,7 @@
 	patches.suse/0001-cxgb4vf-Few-more-link-management-changes.patch
 	patches.suse/0001-cxgb4-cxgb4vf-Add-support-for-SGE-doorbell-queue-tim.patch
 	patches.suse/0001-cxgb4-Add-capability-to-get-set-SGE-Doorbell-Queue-T.patch
+	patches.suse/net-mlx5-Add-new-fields-to-Port-Type-and-Speed-regis.patch
 	patches.suse/0001-cxgb4-Mask-out-interrupts-that-are-not-enabled.patch
 	patches.suse/net-smc-cleanup-for-smcr_tx_sndbuf_nonempty
 	patches.suse/net-smc-rework-pnet-table
