--- a/series.conf
+++ b/series.conf
@@ -27659,6 +27659,7 @@
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
 	patches.suse/net-ethtool-Introduce-link_ksettings-API-for-virtual.patch
+	patches.suse/net-mlx5-Expose-link-speed-directly.patch
 	patches.suse/Bluetooth-RFCOMM-fix-ODEBUG-bug-in-rfcomm_dev_ioctl.patch
 	patches.suse/mwifiex-set-needed_headroom-not-hard_header_len.patch
 	patches.suse/ath9k-Handle-txpower-changes-even-when-TPC-is-disabl.patch
