--- a/series.conf
+++ b/series.conf
@@ -17478,6 +17478,7 @@
 	patches.suse/qed-Support-other-classification-modes.patch
 	patches.suse/qede-Support-flow-classification-to-the-VFs.patch
 	patches.suse/qed-Support-drop-action-classification.patch
+	patches.suse/net-mlx5e-Move-port-speed-code-from-en_ethtool.c-to-.patch
 	patches.suse/bnx2x-Collect-the-device-debug-information-during-Tx.patch
 	patches.suse/0001-net-stmmac-Use-mutex-instead-of-spinlock.patch
 	patches.suse/qmi_wwan-apply-SET_DTR-quirk-to-the-SIMCOM-shared-de.patch
