selftests/powerpc: Fix build errors in powerpc ptrace selftests (boo#1124278).

--- a/series.conf
+++ b/series.conf
@@ -23602,6 +23602,7 @@
 	patches.suse/powerpc-pci-Separate-SR-IOV-Calls.patch
 	patches.suse/powerpc-pseries-Add-pseries-SR-IOV-Machine-dependent.patch
 	patches.suse/PCI-IOV-Add-pci_vf_drivers_autoprobe-interface.patch
+	patches.suse/selftests-powerpc-Fix-build-errors-in-powerpc-ptrace.patch
 	patches.suse/powerpc-introduce-pte_set_hidx-helper.patch
 	patches.suse/powerpc-introduce-pte_get_hash_gslot-helper.patch
 	patches.suse/powerpc-Free-up-four-64K-PTE-bits-in-4K-backed-HPTE-.patch
