--- a/series.conf
+++ b/series.conf
@@ -27834,6 +27834,7 @@
 	patches.suse/msft-hv-2046-x86-Hyper-V-Free-hv_panic_page-when-fail-to-register.patch
 	patches.suse/msft-hv-2047-x86-Hyper-V-Trigger-crash-enlightenment-only-once-du.patch
 	patches.suse/msft-hv-2048-x86-Hyper-V-Report-crash-register-data-or-kmsg-befor.patch
+	patches.suse/msft-hv-2049-x86-Hyper-V-Report-crash-register-data-when-sysctl_r.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
