Drivers: hv: vmbus: Fix the issue with freeing up hv_ctl_table_hdr (bsc#1170618).

--- a/series.conf
+++ b/series.conf
@@ -19542,6 +19542,7 @@
 	patches.suse/parport-sunbpp-fix-error-return-code.patch
 	patches.suse/extcon-Release-locking-when-sending-the-notification
 	patches.suse/msft-hv-1737-Drivers-hv-vmus-Fix-the-check-for-return-value-from-.patch
+	patches.suse/msft-hv-1738-Drivers-hv-vmbus-Fix-the-issue-with-freeing-up-hv_ct.patch
 	patches.suse/msft-hv-1742-Drivers-hv-vmbus-Reset-the-channel-callback-in-vmbus.patch
 	patches.suse/misc-ti-st-Fix-memory-leak-in-the-error-path-of-prob.patch
 	patches.suse/uio-potential-double-frees-if-__uio_register_device-
