Drivers: hv: vmus: Fix the check for return value from kmsg get dump buffer (bsc#1170618).

--- a/series.conf
+++ b/series.conf
@@ -19541,6 +19541,7 @@
 	patches.suse/coresight-tpiu-Fix-disabling-timeouts.patch
 	patches.suse/parport-sunbpp-fix-error-return-code.patch
 	patches.suse/extcon-Release-locking-when-sending-the-notification
+	patches.suse/msft-hv-1737-Drivers-hv-vmus-Fix-the-check-for-return-value-from-.patch
 	patches.suse/msft-hv-1742-Drivers-hv-vmbus-Reset-the-channel-callback-in-vmbus.patch
 	patches.suse/misc-ti-st-Fix-memory-leak-in-the-error-path-of-prob.patch
 	patches.suse/uio-potential-double-frees-if-__uio_register_device-
