x86: hyperv: report value of misc_features (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27829,6 +27829,7 @@
 	patches.suse/x86-xen-fix-booting-32-bit-pv-guest.patch
 	patches.suse/0020-lib-raid6-test-fix-build-on-distros-whose-bin-sh-is-.patch
 	patches.suse/cifs-ignore-cached-share-root-handle-closing-errors.patch
+	patches.suse/msft-hv-2044-x86-hyperv-report-value-of-misc_features.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
