x86/hyperv: Allow guests to enable InvariantTSC (bsc#1170620).

--- a/series.conf
+++ b/series.conf
@@ -26523,6 +26523,7 @@
 	patches.suse/regulator-ab8500-Remove-SYSCLKREQ-from-enum-ab8505_r.patch
 	patches.suse/spi-atmel-fix-handling-of-cs_change-set-on-non-last-.patch
 	patches.suse/spi-atmel-Fix-CS-high-support.patch
+	patches.suse/msft-hv-1964-x86-hyperv-Allow-guests-to-enable-InvariantTSC.patch
 	patches.suse/x86-speculation-fix-incorrect-mds-taa-mitigation-status.patch
 	patches.suse/x86-speculation-fix-redundant-mds-mitigation-message.patch
 	patches.suse/stacktrace-get-rid-of-unneeded-pattern.patch
