--- a/series.conf
+++ b/series.conf
@@ -27831,6 +27831,7 @@
 	patches.suse/cifs-ignore-cached-share-root-handle-closing-errors.patch
 	patches.suse/msft-hv-2044-x86-hyperv-report-value-of-misc_features.patch
 	patches.suse/msft-hv-2045-x86-Hyper-V-Unload-vmbus-channel-in-hv-panic-callbac.patch
+	patches.suse/msft-hv-2046-x86-Hyper-V-Free-hv_panic_page-when-fail-to-register.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
