--- a/series.conf
+++ b/series.conf
@@ -19534,6 +19534,7 @@
 	patches.suse/misc-sram-enable-clock-before-registering-regions.patch
 	patches.suse/vmci-type-promotion-bug-in-qp_host_get_user_memory.patch
 	patches.suse/tsl2550-fix-lux1_input-error-in-low-light.patch
+	patches.suse/msft-hv-1727-Drivers-HV-Send-one-page-worth-of-kmsg-dump-over-Hyp.patch
 	patches.suse/mei-bus-type-promotion-bug-in-mei_nfc_if_version.patch
 	patches.suse/mei-don-t-update-offset-in-write
 	patches.suse/coresight-Handle-errors-in-finding-input-output-port.patch
