--- a/series.conf
+++ b/series.conf
@@ -26265,6 +26265,7 @@
 	patches.suse/net-hisilicon-Fix-ping-latency-when-deal-with-high-t.patch
 	patches.suse/net-smc-fix-refcounting-for-non-blocking-connect
 	patches.suse/net-mlx5e-Fix-handling-of-compressed-CQEs-in-case-of.patch
+	patches.suse/net-mlx5e-Fix-ethtool-self-test-link-speed.patch
 	patches.suse/net-annotate-accesses-to-sk-sk_incoming_cpu.patch
 	patches.suse/net-annotate-lockless-accesses-to-sk-sk_napi_id.patch
 	patches.suse/cxgb4-fix-panic-when-attaching-to-ULD-fail.patch
