KVM x86: Extend AMD specific guest behavior to Hygon virtual CPUs (bsc#1152489).

--- a/series.conf
+++ b/series.conf
@@ -27222,6 +27222,7 @@
 	patches.suse/0018-dm-zoned-remove-duplicate-nr_rnd_zones-increase-in-d.patch
 	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
 	patches.suse/xfs-don-t-ever-return-a-stale-pointer-from-__xfs_dir.patch
+	patches.suse/kvm-x86-extend-amd-specific-guest-behavior-to-hygon-virtual-cpus.patch
 	patches.suse/s390-gmap-return-proper-error-code-on-ksm-unsharing
 	patches.suse/ALSA-via82xx-Fix-endianness-annotations.patch
 	patches.suse/ALSA-emu10k1-Fix-endianness-annotations.patch
