ALSA: hda/realtek - Add more fixup entries for Clevo machines (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27464,6 +27464,7 @@
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
 	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
+	patches.suse/ALSA-hda-realtek-Add-more-fixup-entries-for-Clevo-ma.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
