ALSA: iec1712: Initialize STDSP24 properly when using the model=staudio option (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27463,6 +27463,7 @@
 	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
+	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
