ALSA: hda/realtek - Fix silent output on Gigabyte X570 Aorus Xtreme (bsc#1111666).

--- a/series.conf
+++ b/series.conf
@@ -53700,6 +53700,7 @@
 	patches.suse/pinctrl-baytrail-Enable-pin-configuration-setting-fo.patch
 	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
+	patches.suse/ALSA-hda-realtek-Fix-silent-output-on-Gigabyte-X57-2.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
