--- a/series.conf
+++ b/series.conf
@@ -26684,6 +26684,7 @@
 	patches.suse/ALSA-hda-hdmi-add-retry-logic-to-parse_intel_hdmi.patch
 	patches.suse/ALSA-hda-Add-docking-station-support-for-Lenovo-Thin.patch
 	patches.suse/ALSA-hda-Add-Clevo-W65_67SB-the-power_save-blacklist.patch
+	patches.suse/s390-pci-recover-handle-in-clp_set_pci_fn
 	patches.suse/pinctrl-sh-pfc-r8a7778-Fix-duplicate-SDSELF_B-and-SD.patch
 	patches.suse/pinctrl-sh-pfc-sh7264-Fix-CAN-function-GPIOs.patch
 	patches.suse/pinctrl-sh-pfc-sh7269-Fix-CAN-function-GPIOs.patch
