x86/unwind/orc: Fix unwind_get_return_address_ptr() for inactive tasks (bsc#1058115).

--- a/series.conf
+++ b/series.conf
@@ -27476,6 +27476,7 @@
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
 	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
 	patches.suse/ALSA-hda-realtek-Add-more-fixup-entries-for-Clevo-ma.patch
+	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
