drm/edid: Fix off-by-one in DispID DTD pixel clock (bsc#1114279)

--- a/series.conf
+++ b/series.conf
@@ -27436,6 +27436,7 @@
 	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
 	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
+	patches.suse/0001-drm-edid-Fix-off-by-one-in-DispID-DTD-pixel-clock.patch
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_draw_dirty_fb.patch
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_hw_surface_alloc.patch
 	patches.suse/drm-qxl-qxl_release-use-after-free.patch
