drm/i915/gvt: Init DPLL/DDI vreg for virtual display instead of (bsc#1114279)

--- a/series.conf
+++ b/series.conf
@@ -27466,6 +27466,7 @@
 	patches.suse/x86-unwind-orc-don-t-skip-the-first-frame-for-inactive-tasks.patch
 	patches.suse/x86-unwind-orc-prevent-unwinding-before-orc-initialization.patch
 	patches.suse/x86-unwind-orc-fix-error-path-for-bad-orc-entry-type.patch
+	patches.suse/0002-drm-i915-gvt-Init-DPLL-DDI-vreg-for-virtual-display-.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
