--- a/series.conf
+++ b/series.conf
@@ -27458,6 +27458,7 @@
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/USB-serial-garmin_gps-add-sanity-checking-for-data-l.patch
+	patches.suse/scsi-qla2xxx-Fix-hang-when-issuing-nvme-disconnect-a.patch
 	patches.suse/objtool-fix-stack-offset-tracking-for-indirect-cfas.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-register-clearing-code.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-kernel-exit-path.patch
