scsi: qla2xxx: Do not log message when reading port speed via sysfs (bsc#1157169).

--- a/series.conf
+++ b/series.conf
@@ -27480,6 +27480,7 @@
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
 	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
 	patches.suse/ALSA-hda-realtek-Add-more-fixup-entries-for-Clevo-ma.patch
+	patches.suse/scsi-qla2xxx-Do-not-log-message-when-reading-port-sp.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 
 	# jejb/scsi for-next
