ALSA: hda/realtek - Add a model for Thinkpad T570 without DAC workaround (bsc#1172017).

--- a/series.conf
+++ b/series.conf
@@ -54225,6 +54225,7 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.suse/ALSA-hda-realtek-Add-a-model-for-Thinkpad-T570-witho.patch
 	patches.kabi/hda-relaxed_resume-flag-kabi-fix.patch
 	patches.kabi/ALSA-hda-kabi-workaround-for-generic-parser-flag.patch
 	patches.kabi/ALSA-snd_hda_pick_pin_fixup-kABI-workaround.patch
