--- a/series.conf
+++ b/series.conf
@@ -27493,6 +27493,7 @@
 	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
+	patches.suse/iommu-amd-fix-over-read-of-acpi-uid-from-ivrs-table
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
 	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
 	patches.suse/ALSA-hda-realtek-Add-more-fixup-entries-for-Clevo-ma.patch
