--- a/series.conf
+++ b/series.conf
@@ -27455,6 +27455,7 @@
 	patches.suse/block-remove-the-bd_openers-checks-in-blk_drop_parti.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 	patches.suse/nfs-Fix-potential-posix_acl-refcnt-leak-in-nfs3_set_.patch
+	patches.suse/iommu-amd-fix-legacy-interrupt-remapping-for-x2apic-enabled-system
 	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
 	patches.suse/batman-adv-fix-batadv_nc_random_weight_tq.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_show_throughput.patch
