--- a/series.conf
+++ b/series.conf
@@ -27470,6 +27470,7 @@
 	patches.suse/scsi-ibmvfc-Don-t-send-implicit-logouts-prior-to-NPI.patch
 	patches.suse/scsi-ibmvscsi-Fix-WARN_ON-during-event-pool-release.patch
 	patches.suse/iommu-amd-fix-race-in-increase_address_space-fetch_pte
+	patches.suse/iommu-amd-do-not-loop-forever-when-trying-to-increase-address-space
 	patches.suse/objtool-fix-stack-offset-tracking-for-indirect-cfas.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-register-clearing-code.patch
 	patches.suse/x86-entry-64-fix-unwind-hints-in-kernel-exit-path.patch
