tpm/tpm_tis: Free IRQ if probing fails (bsc#1082555).

--- a/series.conf
+++ b/series.conf
@@ -27398,6 +27398,7 @@
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
 	patches.suse/x86-resctrl-preserve-cdp-enable-over-cpu-hotplug.patch
 	patches.suse/tpm-ibmvtpm-retry-on-H_CLOSED-in-tpm_ibmvtpm_send.patch
+	patches.suse/tpm-tpm_tis-Free-IRQ-if-probing-fails.patch
 	patches.suse/nfsd-memory-corruption-in-nfsd4_lock.patch
 	patches.suse/drm-meson-Delete-an-error-message-in-meson_dw_hdmi_b.patch
 	patches.suse/ALSA-hda-realtek-Fix-unexpected-init_amp-override.patch
