powerpc/pci/of: Parse unassigned resources (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -24672,6 +24672,7 @@
 	patches.suse/powerpc-rtas-retry-when-cpu-offline-races-with-suspe.patch
 	patches.suse/powerpc-64s-Rename-PPC_INVALIDATE_ERAT-to-PPC_ISA_3_.patch
 	patches.suse/powerpc-64s-radix-keep-kernel-ERAT-over-local-proces.patch
+	patches.suse/powerpc-pci-of-Parse-unassigned-resources.patch
 	patches.suse/KVM-PPC-Book3S-HV-Fix-CR0-setting-in-TM-emulation.patch
 	patches.suse/powerpc-mm-mark-more-tlb-functions-as-__always_inlin.patch
 	patches.suse/powerpc-mm-hash-4k-Don-t-use-64K-page-size-for-vmemm.patch
