--- a/series.conf
+++ b/series.conf
@@ -27413,6 +27413,7 @@
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
+	patches.suse/powerpc-setup_64-Set-cache-line-size-based-on-cache-.patch
 	patches.suse/s390-ftrace-fix-potential-crashes-when-switching-tracers
 	patches.suse/staging-comedi-dt2815-fix-writing-hi-byte-of-analog-.patch
 	patches.suse/iio-ad7797-Use-correct-attribute_group.patch
