Btrfs: fix deadlock with memory reclaim during scrub (bsc#1172127).

--- a/series.conf
+++ b/series.conf
@@ -21623,6 +21623,7 @@
 	patches.suse/btrfs-extent-tree-detect-bytes_may_use-underflow-earlier.patch
 	patches.suse/btrfs-extent-tree-detect-bytes_pinned-underflow-earlier.patch
 	patches.suse/0001-btrfs-harden-agaist-duplicate-fsid-on-scanned-device.patch
+	patches.suse/Btrfs-fix-deadlock-with-memory-reclaim-during-scrub.patch
 	patches.suse/0001-Btrfs-fix-fsync-of-files-with-multiple-hard-links-in.patch
 	patches.suse/btrfs-fix-error-handling-in-btrfs_cleanup_ordered_extents.patch
 	patches.suse/0001-btrfs-add-btrfs_delete_ref_head-helper.patch
