Btrfs: use nofs context when initializing security xattrs to avoid deadlock (bsc#1172127).

--- a/series.conf
+++ b/series.conf
@@ -21638,6 +21638,7 @@
 	patches.suse/0010-btrfs-fix-truncate-throttling.patch
 	patches.suse/0011-btrfs-catch-cow-on-deleting-snapshots.patch
 	patches.suse/btrfs-run-delayed-items-before-dropping-the-snapshot.patch
+	patches.suse/Btrfs-use-nofs-context-when-initializing-security-xa.patch
 	patches.suse/0011-Btrfs-send-fix-race-with-transaction-commits-that-cr.patch
 	patches.suse/dlm-fix-invalid-free.patch
 	patches.suse/dlm-don-t-leak-kernel-pointer-to-userspace.patch
