--- a/series.conf
+++ b/series.conf
@@ -22601,6 +22601,7 @@
 	patches.suse/0001-USB-serial-ftdi_sio-add-ID-for-Hjelmslund-Electronic.patch
 	patches.suse/usb-chipidea-Grab-the-legacy-USB-PHY-by-phandle-firs.patch
 	patches.suse/ext2-Fix-underflow-in-ext2_max_size.patch
+	patches.suse/Btrfs-setup-a-nofs-context-for-memory-allocation-at-.patch
 	patches.suse/0001-btrfs-make-btrfs_destroy_delayed_refs-use-btrfs_delayed_ref_lock.patch
 	patches.suse/0002-btrfs-make-btrfs_destroy_delayed_refs-use-btrfs_delete_ref_head.patch
 	patches.suse/0003-btrfs-call-btrfs_create_pending_block_groups-unconditionally.patch
