Btrfs: setup a nofs context for memory allocation at __btrfs_set_acl (bsc#1172127).

--- a/series.conf
+++ b/series.conf
@@ -22602,6 +22602,7 @@
 	patches.suse/usb-chipidea-Grab-the-legacy-USB-PHY-by-phandle-firs.patch
 	patches.suse/ext2-Fix-underflow-in-ext2_max_size.patch
 	patches.suse/Btrfs-setup-a-nofs-context-for-memory-allocation-at-.patch
+	patches.suse/Btrfs-setup-a-nofs-context-for-memory-allocation-at-__btrfs_set_acl-.patch
 	patches.suse/0001-btrfs-make-btrfs_destroy_delayed_refs-use-btrfs_delayed_ref_lock.patch
 	patches.suse/0002-btrfs-make-btrfs_destroy_delayed_refs-use-btrfs_delete_ref_head.patch
 	patches.suse/0003-btrfs-call-btrfs_create_pending_block_groups-unconditionally.patch
