--- a/series.conf
+++ b/series.conf
@@ -27031,6 +27031,7 @@
 	patches.suse/vt-selection-push-console-lock-down.patch
 	patches.suse/vt-selection-push-sel_lock-up.patch
 	patches.suse/0001-virtio-blk-fix-hw_queue-stopped-on-arbitrary-error.patch
+	patches.suse/workqueue-don-t-use-wq_select_unbound_cpu-for-bound-.patch
 	patches.suse/pinctrl-core-Remove-extra-kref_get-which-blocks-hogs.patch
 	patches.suse/r8152-check-disconnect-status-after-long-sleep.patch
 	patches.suse/netlink-Use-netlink-header-as-base-to-calculate-bad-.patch
