x86/kprobes: Avoid kretprobe recursion bug (bsc#1114279).

--- a/series.conf
+++ b/series.conf
@@ -23367,6 +23367,7 @@
 	patches.suse/device_cgroup-fix-RCU-imbalance-in-error-case.patch
 	patches.suse/x86-speculation-prevent-deadlock-on-ssb_state-lock.patch
 	patches.suse/0001-tools-lib-traceevent-Fix-missing-equality-check-for-.patch
+	patches.suse/x86-kprobes-avoid-kretprobe-recursion-bug.patch
 	patches.suse/ALSA-hda-Initialize-power_state-field-properly.patch
 	patches.suse/ALSA-info-Fix-racy-addition-deletion-of-nodes.patch
 	patches.suse/ALSA-core-Fix-card-races-between-register-and-discon.patch
