scsi: lpfc: Remove re-binding of nvme rport during registration (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53735,6 +53735,7 @@
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Maintain-atomic-consistency-of-queue_claim.patch
+	patches.suse/scsi-lpfc-Remove-re-binding-of-nvme-rport-during-reg.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
