scsi: lpfc: Fix negation of else clause in lpfc_prep_node_fc4type (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53736,6 +53736,7 @@
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Maintain-atomic-consistency-of-queue_claim.patch
 	patches.suse/scsi-lpfc-Remove-re-binding-of-nvme-rport-during-reg.patch
+	patches.suse/scsi-lpfc-Fix-negation-of-else-clause-in-lpfc_prep_n.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
