scsi: lpfc: Fix MDS Diagnostic Enablement definition (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53740,6 +53740,7 @@
 	patches.suse/scsi-lpfc-Change-default-queue-allocation-for-reduce.patch
 	patches.suse/scsi-lpfc-Remove-unnecessary-lockdep_assert_held-cal.patch
 	patches.suse/scsi-lpfc-Fix-noderef-and-address-space-warnings.patch
+	patches.suse/scsi-lpfc-Fix-MDS-Diagnostic-Enablement-definition.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
