scsi: lpfc: Update lpfc version to 12.8.0.1 (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53741,6 +53741,7 @@
 	patches.suse/scsi-lpfc-Remove-unnecessary-lockdep_assert_held-cal.patch
 	patches.suse/scsi-lpfc-Fix-noderef-and-address-space-warnings.patch
 	patches.suse/scsi-lpfc-Fix-MDS-Diagnostic-Enablement-definition.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-12.8.0.1.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
