--- a/series.conf
+++ b/series.conf
@@ -53742,6 +53742,7 @@
 	patches.suse/scsi-lpfc-Fix-noderef-and-address-space-warnings.patch
 	patches.suse/scsi-lpfc-Fix-MDS-Diagnostic-Enablement-definition.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-12.8.0.1.patch
+	patches.suse/scsi-lpfc-Remove-redundant-initialization-to-variabl.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
