--- a/series.conf
+++ b/series.conf
@@ -53739,6 +53739,7 @@
 	patches.suse/scsi-lpfc-Fix-negation-of-else-clause-in-lpfc_prep_n.patch
 	patches.suse/scsi-lpfc-Change-default-queue-allocation-for-reduce.patch
 	patches.suse/scsi-lpfc-Remove-unnecessary-lockdep_assert_held-cal.patch
+	patches.suse/scsi-lpfc-Fix-noderef-and-address-space-warnings.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
