scsi: lpfc: Maintain atomic consistency of queue_claimed flag (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53733,6 +53733,9 @@
 	patches.suse/scsi-qla2xxx-Do-not-log-message-when-reading-port-sp.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 
+	# jejb/scsi for-next
+	patches.suse/scsi-lpfc-Maintain-atomic-consistency-of-queue_claim.patch
+
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
 	patches.suse/0003-efi-Add-an-EFI-signature-blob-parser.patch
