scsi: lpfc: Fix lpfc_nodelist leak when processing unsolicited event (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53753,6 +53753,7 @@
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-remove-duplicate-unloading-checks.patch
+	patches.suse/scsi-lpfc-Fix-lpfc_nodelist-leak-when-processing-uns.patch
 
 	# out-of-tree patches
 	patches.suse/net-mvpp2-fix-condition-for-setting-up-link-interrup.patch
