scsi: lpfc: remove duplicate unloading checks (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53751,6 +53751,9 @@
 	patches.suse/0005-MODSIGN-Allow-the-db-UEFI-variable-to-be-suppressed.patch
 	patches.suse/0006-modsign-Use-secondary-trust-keyring-for-module-signi.patch
 
+	# mkp/scsi queue
+	patches.suse/scsi-lpfc-remove-duplicate-unloading-checks.patch
+
 	# out-of-tree patches
 	patches.suse/net-mvpp2-fix-condition-for-setting-up-link-interrup.patch
 	patches.suse/cifs-handle-netapp-error-codes.patch
