scsi: lpfc: Remove unnecessary lockdep_assert_held calls (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53738,6 +53738,7 @@
 	patches.suse/scsi-lpfc-Remove-re-binding-of-nvme-rport-during-reg.patch
 	patches.suse/scsi-lpfc-Fix-negation-of-else-clause-in-lpfc_prep_n.patch
 	patches.suse/scsi-lpfc-Change-default-queue-allocation-for-reduce.patch
+	patches.suse/scsi-lpfc-Remove-unnecessary-lockdep_assert_held-cal.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
