scsi: lpfc: Change default queue allocation for reduced memory consumption (bsc#1164780).

--- a/series.conf
+++ b/series.conf
@@ -53737,6 +53737,7 @@
 	patches.suse/scsi-lpfc-Maintain-atomic-consistency-of-queue_claim.patch
 	patches.suse/scsi-lpfc-Remove-re-binding-of-nvme-rport-during-reg.patch
 	patches.suse/scsi-lpfc-Fix-negation-of-else-clause-in-lpfc_prep_n.patch
+	patches.suse/scsi-lpfc-Change-default-queue-allocation-for-reduce.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
