--- a/blacklist.conf
+++ b/blacklist.conf
@@ -601,6 +601,7 @@ ba552399954dde1b388f7749fecad5c349216981 # printk: fixes 719f6a7040f1bdaf96fcc t
 a338f84dc196f44b63ba0863d2f34fd9b1613572 # printk: fixes 719f6a7040f1bdaf96fcc that is needed only when printing trace buffer when panicing in NMI (bsc#1112173)
 03fc7f9c99c1e7ae2925d459e8487f1a6f199f79 # printk: fixes 719f6a7040f1bdaf96fcc that is needed only when printing trace buffer when panicing in NMI (bsc#1112173)
 c3fee60908db4a8594f2e4a2131998384b8fa006 # printk: cosmetic; anyway, it fixes a commit that we do not have in SLE15
+075e1a0c50f59ea210561d0d0fedbd945615df78 # sysrq: prehistoric bug, non-critical, found by code review
 b60706644282af04e4aa57da5af57470d453cd1f # vsprintf: cosmetic
 36594b317c656bec8f968db93701d2cb9bc9155c # vsprintf: depends on a huge clean up; it is just nice to have check
 741a76b350897604c48fb12beff1c9b77724dc96 # kthread: fixes rather rare races in CPU hotplug; there are several followup fixes on top of it to get it actually right; does not worth the risk
