signal/pid_namespace: Fix reboot_pid_ns to use send_sig not force_sig (bsc#1172185).

--- a/series.conf
+++ b/series.conf
@@ -24414,6 +24414,7 @@
 	patches.suse/crypto-talitos-fix-max-key-size-for-sha384-and-sha51.patch
 	patches.suse/lib-scatterlist-Fix-mapping-iterator-when-sg-offset-.patch
 	patches.suse/crypto-ccp-Validate-the-the-error-value-used-to-inde.patch
+	patches.suse/signal-pid_namespace-Fix-reboot_pid_ns-to-use-send_s.patch
 	patches.suse/signal-cifs-Fix-cifs_put_tcp_session-to-call-send_sig-instead-of-fo.patch
 	patches.suse/signal-properly-set-trace_signal_lose_info-in-_send_signal.patch
 	patches.suse/pwm-stm32-Use-3-cells-of_xlate.patch
