--- a/series.conf
+++ b/series.conf
@@ -26481,6 +26481,7 @@
 	patches.suse/ALSA-usb-audio-fix-set_format-altsetting-sanity-chec.patch
 	patches.suse/ALSA-hda-hdmi-fix-atpx_present-when-CLASS-is-not-VGA.patch
 	patches.suse/ALSA-ice1724-Fix-sleep-in-atomic-in-Infrasonic-Quart.patch
+	patches.suse/taskstats-fix-data-race.patch
 	patches.suse/exit-panic-before-exit_mm-on-global-init-exit.patch
 	patches.suse/Btrfs-fix-infinite-loop-during-nocow-writeback-due-t.patch
 	patches.suse/0001-media-cec-CEC-2.0-only-bcast-messages-were-ignored.patch
