component: Silence bind error on -EPROBE_DEFER (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27469,6 +27469,7 @@
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/USB-core-Fix-misleading-driver-bug-report.patch
 	patches.suse/USB-serial-garmin_gps-add-sanity-checking-for-data-l.patch
+	patches.suse/component-Silence-bind-error-on-EPROBE_DEFER.patch
 	patches.suse/scsi-qla2xxx-Fix-hang-when-issuing-nvme-disconnect-a.patch
 	patches.suse/scsi-qla2xxx-Delete-all-sessions-before-unregister-l.patch
 	patches.suse/scsi-ibmvfc-Don-t-send-implicit-logouts-prior-to-NPI.patch
