--- a/series.conf
+++ b/series.conf
@@ -27499,6 +27499,7 @@
 	patches.suse/ALSA-hda-realtek-Add-more-fixup-entries-for-Clevo-ma.patch
 	patches.suse/scsi-qla2xxx-Do-not-log-message-when-reading-port-sp.patch
 	patches.suse/iio-dac-vf610-Fix-an-error-handling-path-in-vf610_da.patch
+	patches.suse/staging-iio-ad2s1210-Fix-SPI-reading.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 
 	# dhowells/linux-fs keys-uefi
