--- a/series.conf
+++ b/series.conf
@@ -27467,6 +27467,7 @@
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
+	patches.suse/USB-core-Fix-misleading-driver-bug-report.patch
 	patches.suse/USB-serial-garmin_gps-add-sanity-checking-for-data-l.patch
 	patches.suse/scsi-qla2xxx-Fix-hang-when-issuing-nvme-disconnect-a.patch
 	patches.suse/scsi-qla2xxx-Delete-all-sessions-before-unregister-l.patch
