mei: release me_cl object reference (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27502,6 +27502,7 @@
 	patches.suse/staging-iio-ad2s1210-Fix-SPI-reading.patch
 	patches.suse/iio-adc-stm32-adc-fix-device-used-to-request-dma.patch
 	patches.suse/iio-sca3000-Remove-an-erroneous-get_device.patch
+	patches.suse/mei-release-me_cl-object-reference.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 
 	# dhowells/linux-fs keys-uefi
