--- a/series.conf
+++ b/series.conf
@@ -26706,6 +26706,7 @@
 	patches.suse/staging-vt6656-use-NULLFUCTION-stack-on-mac80211.patch
 	patches.suse/staging-vt6656-Fix-false-Tx-excessive-retries-report.patch
 	patches.suse/staging-wlan-ng-ensure-error-return-is-actually-retu.patch
+	patches.suse/iio-adc-stm32-adc-Use-dma_request_chan-instead-dma_r.patch
 	patches.suse/driver-core-platform-Prevent-resouce-overflow-from-c.patch
 	patches.suse/driver-core-Print-device-when-resources-present-in-r.patch
 	patches.suse/driver-core-platform-fix-u32-greater-or-equal-to-zer.patch
