--- a/series.conf
+++ b/series.conf
@@ -27458,6 +27458,7 @@
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 	patches.suse/nfs-Fix-potential-posix_acl-refcnt-leak-in-nfs3_set_.patch
 	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
+	patches.suse/HID-multitouch-add-eGalaxTouch-P80H84-support.patch
 	patches.suse/batman-adv-fix-batadv_nc_random_weight_tq.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_show_throughput.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_store_throughpu.patch
