i2c: dev: Fix the race between the release of i2c_dev and cdev (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27247,6 +27247,7 @@
 	patches.suse/ASoC-sun8i-codec-Remove-unused-dev-from-codec-struct.patch
 	patches.suse/ASoC-Intel-mrfld-fix-incorrect-check-on-p-sink.patch
 	patches.suse/ALSA-hda-realtek-Set-principled-PC-Beep-configuratio.patch
+	patches.suse/i2c-dev-Fix-the-race-between-the-release-of-i2c_dev-.patch
 	patches.suse/scsi-tcm_qla2xxx-Make-qlt_alloc_qfull_cmd-set-cmd-se.patch
 	patches.suse/scsi-qla2xxx-Check-locking-assumptions-at-runtime-in.patch
 	patches.suse/scsi-ufs-fix-ufshcd_hold-caused-scheduling-while-atomic
