--- a/series.conf
+++ b/series.conf
@@ -26428,6 +26428,7 @@
 	patches.suse/Revert-mmc-sdhci-Fix-incorrect-switch-to-HS-mode.patch
 	patches.suse/mmc-mediatek-fix-CMD_TA-to-2-for-MT8173-HS200-HS400-.patch
 	patches.suse/mmc-sdhci-of-esdhc-Revert-mmc-sdhci-of-esdhc-add-err.patch
+	patches.suse/mmc-sdhci-update-the-tuning-failed-messages-to-pr_debug-level.patch
 	patches.suse/mmc-sdhci-of-esdhc-fix-P2020-errata-handling.patch
 	patches.suse/platform-x86-hp-wmi-Make-buffer-for-HPWMI_FEATURE2_Q.patch
 	patches.suse/platform-x86-pmc_atom-Add-Siemens-CONNECT-X300-to-cr.patch
