--- a/series.conf
+++ b/series.conf
@@ -53731,6 +53731,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-silent-output-on-Gigabyte-X57-2.patch
 	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
 	patches.suse/ALSA-hda-realtek-Add-more-fixup-entries-for-Clevo-ma.patch
+	patches.suse/0002-drm-etnaviv-fix-perfmon-domain-interation.patch
 	patches.suse/scsi-qla2xxx-Do-not-log-message-when-reading-port-sp.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 
