mmc: dw_mmc: Fix debugfs on 64-bit platforms (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26175,6 +26175,7 @@
 	patches.suse/Documentation-debugfs-Document-debugfs-helper-for-un.patch
 	patches.suse/debugfs-add-debugfs_create_xul-for-hexadecimal-unsigned-long.patch
 	patches.suse/mmc-atmel-mci-fix-debugfs-on-64-bit-platforms.patch
+	patches.suse/mmc-dw_mmc-fix-debugfs-on-64-bit-platforms.patch
 	patches.suse/powerpc-book3s64-Fix-link-stack-flush-on-context-swi.patch
 	patches.suse/KVM-PPC-Book3S-HV-Flush-link-stack-on-guest-exit-to-.patch
 	patches.suse/ftrace-introduce-permanent-ftrace_ops-flag.patch
