--- a/series.conf
+++ b/series.conf
@@ -26173,6 +26173,7 @@
 	patches.suse/iio-imu-adis-assign-read-val-in-debugfs-hook-only-if.patch
 	patches.suse/iio-imu-adis-assign-value-only-if-return-code-zero-i.patch
 	patches.suse/Documentation-debugfs-Document-debugfs-helper-for-un.patch
+	patches.suse/debugfs-add-debugfs_create_xul-for-hexadecimal-unsigned-long.patch
 	patches.suse/powerpc-book3s64-Fix-link-stack-flush-on-context-swi.patch
 	patches.suse/KVM-PPC-Book3S-HV-Flush-link-stack-on-guest-exit-to-.patch
 	patches.suse/ftrace-introduce-permanent-ftrace_ops-flag.patch
