mmc: renesas_sdhi: limit block count to 16 bit for old revisions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -23043,6 +23043,7 @@
 	patches.suse/0001-drm-vmwgfx-Don-t-double-free-the-mode-stored-in-par-.patch
 	patches.suse/mmc-pxamci-fix-enum-type-confusion.patch
 	patches.suse/mmc-davinci-remove-extraneous-__init-annotation.patch
+	patches.suse/mmc-renesas_sdhi-limit-block-count-to-16-bit-for-old-revisions.patch
 	patches.suse/ACPI-utils-Drop-reference-in-test-for-device-presenc.patch
 	patches.suse/ALSA-echoaudio-add-a-check-for-ioremap_nocache.patch
 	patches.suse/ALSA-sb8-add-a-check-for-request_region.patch
