PCI: hv: Add support for protocol 1.3 and support PCI_BUS_RELATIONS2 (bsc#1172201, bsc#1172202).

--- a/series.conf
+++ b/series.conf
@@ -53474,6 +53474,7 @@
 	patches.suse/PCI-endpoint-Fix-clearing-start-entry-in-configfs.patch
 	patches.suse/misc-pci_endpoint_test-Fix-to-support-10-pci-endpoin.patch
 	patches.suse/msft-hv-2032-PCI-hv-Decouple-the-func-definition-in-hv_dr_state-f.patch
+	patches.suse/msft-hv-2033-PCI-hv-Add-support-for-protocol-1.3-and-support-PCI_.patch
 	patches.suse/s390-cpum_cf-add-new-extended-counters-for-ibm-z15
 	patches.suse/s390-cpuinfo-fix-wrong-output-when-cpu0-is-offline
 	patches.suse/s390-diag-fix-display-of-diagnose-call-statistics
