Input: synaptics-rmi4 - really fix attn_data use-after-free (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27504,6 +27504,7 @@
 	patches.suse/iio-sca3000-Remove-an-erroneous-get_device.patch
 	patches.suse/mei-release-me_cl-object-reference.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
+	patches.suse/Input-synaptics-rmi4-really-fix-attn_data-use-after-.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
