watchdog: reset last_hw_keepalive time at start (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27349,6 +27349,7 @@
 	patches.suse/kvm-s390-vsie-fix-delivery-of-addressing-exceptions
 	patches.suse/kvm-s390-vsie-fix-possible-race-when-shadowing-region-3-tables
 	patches.suse/iommu-amd-fix-the-configuration-of-gcr3-table-root-pointer
+	patches.suse/watchdog-reset-last_hw_keepalive-time-at-start.patch
 	patches.suse/s390-cio-avoid-duplicated-add-uevents
 	patches.suse/s390-cio-generate-delayed-uevent-for-vfio-ccw-subchannels
 	patches.suse/block-fix-busy-device-checking-in-blk_drop_partition.patch
