ima: Fix return value of ima_write_policy() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27509,6 +27509,7 @@
 	patches.suse/usb-host-xhci-plat-keep-runtime-active-when-removing.patch
 	patches.suse/usb-gadget-udc-atmel-Make-some-symbols-static.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
+	patches.suse/ima-Fix-return-value-of-ima_write_policy.patch
 	patches.suse/i2c-mux-demux-pinctrl-Fix-an-error-handling-path-in-.patch
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
 	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
