--- a/series.conf
+++ b/series.conf
@@ -27501,6 +27501,7 @@
 	patches.suse/pinctrl-baytrail-Enable-pin-configuration-setting-fo.patch
 	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
+	patches.suse/usb-gadget-audio-Fix-a-missing-error-return-value-in.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 	patches.suse/i2c-mux-demux-pinctrl-Fix-an-error-handling-path-in-.patch
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
