--- a/series.conf
+++ b/series.conf
@@ -27503,6 +27503,7 @@
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
 	patches.suse/usb-gadget-audio-Fix-a-missing-error-return-value-in.patch
 	patches.suse/usb-gadget-net2272-Fix-a-memory-leak-in-an-error-han.patch
+	patches.suse/usb-gadget-legacy-fix-error-return-code-in-cdc_bind.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 	patches.suse/i2c-mux-demux-pinctrl-Fix-an-error-handling-path-in-.patch
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
