staging: vt6656: Fix pairwise key entry save (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27424,6 +27424,7 @@
 	patches.suse/iio-xilinx-xadc-Fix-sequencer-configuration-for-aux-.patch
 	patches.suse/staging-vt6656-Don-t-set-RCR_MULTICAST-or-RCR_BROADC.patch
 	patches.suse/staging-vt6656-Fix-drivers-TBTT-timing-counter.patch
+	patches.suse/staging-vt6656-Fix-pairwise-key-entry-save.patch
 	patches.suse/staging-comedi-Fix-comedi_device-refcnt-leak-in-come.patch
 	patches.suse/tty-rocket-avoid-OOB-access.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
