usb-storage: Add unusual_devs entry for JMicron JMS566 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27439,6 +27439,7 @@
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 	patches.suse/usb-gadget-udc-atmel-Fix-vbus-disconnect-handling.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
+	patches.suse/usb-storage-Add-unusual_devs-entry-for-JMicron-JMS56.patch
 	patches.suse/USB-sisusbvga-Change-port-variable-from-signed-to-un.patch
 	patches.suse/cifs-protect-updating-server-dstaddr-with-a-spinlock.patch
 	patches.suse/cifs-minor-update-to-comments-around-the-cifs_tcp_ses_lock-mutex.patch
