--- a/series.conf
+++ b/series.conf
@@ -27474,6 +27474,7 @@
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
+	patches.suse/USB-uas-add-quirk-for-LaCie-2Big-Quadra.patch
 	patches.suse/USB-core-Fix-misleading-driver-bug-report.patch
 	patches.suse/USB-serial-garmin_gps-add-sanity-checking-for-data-l.patch
 	patches.suse/component-Silence-bind-error-on-EPROBE_DEFER.patch
