USB: serial: qcserial: Add DW5816e support (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27477,6 +27477,7 @@
 	patches.suse/USB-uas-add-quirk-for-LaCie-2Big-Quadra.patch
 	patches.suse/USB-core-Fix-misleading-driver-bug-report.patch
 	patches.suse/USB-serial-garmin_gps-add-sanity-checking-for-data-l.patch
+	patches.suse/USB-serial-qcserial-Add-DW5816e-support.patch
 	patches.suse/component-Silence-bind-error-on-EPROBE_DEFER.patch
 	patches.suse/scsi-qla2xxx-Fix-hang-when-issuing-nvme-disconnect-a.patch
 	patches.suse/scsi-qla2xxx-Delete-all-sessions-before-unregister-l.patch
