--- a/series.conf
+++ b/series.conf
@@ -27401,6 +27401,7 @@
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
 	patches.suse/x86-resctrl-preserve-cdp-enable-over-cpu-hotplug.patch
+	patches.suse/tpm-tpm_tis-Free-IRQ-if-probing-fails.patch
 	patches.suse/nfsd-memory-corruption-in-nfsd4_lock.patch
 	patches.suse/drm-meson-Delete-an-error-message-in-meson_dw_hdmi_b.patch
 	patches.suse/ALSA-hda-realtek-Fix-unexpected-init_amp-override.patch
