usb: gadget: legacy: fix error return code in gncm_bind() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27504,6 +27504,7 @@
 	patches.suse/usb-gadget-audio-Fix-a-missing-error-return-value-in.patch
 	patches.suse/usb-gadget-net2272-Fix-a-memory-leak-in-an-error-han.patch
 	patches.suse/usb-gadget-legacy-fix-error-return-code-in-cdc_bind.patch
+	patches.suse/usb-gadget-legacy-fix-error-return-code-in-gncm_bind.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 	patches.suse/i2c-mux-demux-pinctrl-Fix-an-error-handling-path-in-.patch
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
