--- a/series.conf
+++ b/series.conf
@@ -27418,6 +27418,7 @@
 	patches.suse/s390-ftrace-fix-potential-crashes-when-switching-tracers
 	patches.suse/staging-comedi-dt2815-fix-writing-hi-byte-of-analog-.patch
 	patches.suse/iio-ad7797-Use-correct-attribute_group.patch
+	patches.suse/iio-adc-stm32-adc-fix-sleep-in-atomic-context.patch
 	patches.suse/iio-xilinx-xadc-Fix-ADC-B-powerdown.patch
 	patches.suse/iio-xilinx-xadc-Fix-clearing-interrupt-when-enabling.patch
 	patches.suse/iio-xilinx-xadc-Fix-sequencer-configuration-for-aux-.patch
