--- a/series.conf
+++ b/series.conf
@@ -12136,6 +12136,7 @@
 	patches.suse/0018-arm64-cputype-Add-MIDR-values-for-Cavium-ThunderX2-C.patch
 	patches.suse/KVM-arm64-Store-vcpu-on-the-stack-during-__guest_ent.patch
 	patches.suse/KVM-arm-arm64-Convert-kvm_host_cpu_state-to-a-static.patch
+	patches.suse/kvm-arm64-change-hyp_panics-dependency-on-tpidr_el2
 	patches.suse/arm64-capabilities-Handle-duplicate-entries-for-a-ca.patch
 	patches.suse/0010-arm64-fix-ID-map-extension-to-52-bits.patch
 	patches.suse/0011-KVM-arm-arm64-fix-HYP-ID-map-extension-to-52-bits.patch
