--- a/series.conf
+++ b/series.conf
@@ -50003,6 +50003,7 @@
 	patches.suse/0002-ocfs2-add-locking-filter-debugfs-file.patch
 	patches.suse/0003-ocfs2-add-first-lock-wait-time-in-locking_state.patch
 	patches.suse/9p-pass-the-correct-prototype-to-read_cache_page.patch
+	patches.suse/msft-hv-1891-drivers-hv-Add-a-module-description-line-to-the-hv_v.patch
 	patches.suse/kvm-svm-avic-do-not-send-avic-doorbell-to-self
 	patches.suse/kvm-convert-kvm_lock-to-a-mutex
 	patches.suse/kvm-vmx-fix-handling-of-mc-that-occurs-during-vm-entry
