HID: hyperv: Add a module description line (bsc#1172249, bsc#1172251).

--- a/series.conf
+++ b/series.conf
@@ -49286,6 +49286,7 @@
 	patches.suse/HID-wacom-Send-BTN_TOUCH-in-response-to-INTUOSP2_BT-.patch
 	patches.suse/HID-wacom-Correct-button-numbering-2nd-gen-Intuos-Pr.patch
 	patches.suse/HID-wacom-Sync-INTUOSP2_BT-touch-state-after-each-fr.patch
+	patches.suse/msft-hv-1882-HID-hyperv-Add-a-module-description-line.patch
 	patches.suse/ALSA-hda-realtek-Update-headset-mode-for-ALC256.patch
 	patches.suse/ALSA-firewire-motu-fix-destruction-of-data-for-isoch.patch
 	patches.suse/ALSA-oxfw-allow-PCM-capture-for-Stanton-SCS.1m.patch
