Input: hyperv-keyboard - add module description (bsc#1172249, bsc#1172251).

--- a/series.conf
+++ b/series.conf
@@ -48933,6 +48933,7 @@
 	patches.suse/0011-netfilter-ebtables-CONFIG_COMPAT-reject-trailing-dat.patch
 	patches.suse/net-seeq-fix-crash-caused-by-not-set-dev.parent.patch
 	patches.suse/bonding-fix-arp_validate-toggling-in-active-backup-m.patch
+	patches.suse/msft-hv-1874-Input-hyperv-keyboard-add-module-description.patch
 	patches.suse/x86-msr-index-cleanup-bit-defines.patch
 	patches.suse/x86-speculation-consolidate-cpu-whitelists.patch
 	patches.suse/x86-speculation-mds-add-basic-bug-infrastructure-for-mds.patch
