--- a/series.conf
+++ b/series.conf
@@ -53758,6 +53758,10 @@
 	patches.suse/0005-MODSIGN-Allow-the-db-UEFI-variable-to-be-suppressed.patch
 	patches.suse/0006-modsign-Use-secondary-trust-keyring-for-module-signi.patch
 
+	# https://github.com/kdave/btrfs-devel.git misc-next
+	patches.suse/0001-btrfs-relocation-Fix-reloc-root-leakage-and-the-NULL.patch
+	patches.suse/0002-btrfs-relocation-Clear-the-DEAD_RELOC_TREE-bit-for-o.patch
+
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-remove-duplicate-unloading-checks.patch
 	patches.suse/scsi-lpfc-Fix-lpfc_nodelist-leak-when-processing-uns.patch
@@ -54093,8 +54097,6 @@
 
 	patches.suse/xfs-unsupported-features.patch
 	patches.suse/ext4-unsupported-features.patch
-	patches.suse/0001-btrfs-relocation-Fix-reloc-root-leakage-and-the-NULL.patch
-	patches.suse/0002-btrfs-relocation-Clear-the-DEAD_RELOC_TREE-bit-for-o.patch
 	patches.suse/btrfs-8888-add-allow_unsupported-module-parameter.patch
 
 	patches.suse/btrfs-qgroup-Mark-qgroup-inconsistent-if-we-re-inher.patch
