i2c: core: Allow empty id_table in ACPI case as well (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4307,6 +4307,7 @@
 	patches.suse/msft-hv-1445-netvsc-fix-race-on-sub-channel-creation.patch
 	patches.suse/s390-qeth-fix-L3-next-hop-in-xmit-qeth-hdr.patch
 	patches.suse/qed-Fix-a-memory-allocation-failure-test-in-qed_mcp_.patch
+	patches.suse/i2c-core-allow-empty-id_table-in-acpi-case-as-well.patch
 	patches.suse/i2c-mux-pinctrl-mention-correct-module-name-in-Kconf
 	patches.suse/userfaultfd-hugetlbfs-remove-superfluous-page-unlock.patch
 	patches.suse/mm-migrate-prevent-racy-access-to-tlb_flush_pending.patch
