--- a/series.conf
+++ b/series.conf
@@ -27550,6 +27550,7 @@
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 	patches.suse/ima-Fix-return-value-of-ima_write_policy.patch
 	patches.suse/iommu-amd-fix-over-read-of-acpi-uid-from-ivrs-table
+	patches.suse/i2c-fix-missing-pm_runtime_put_sync-in-i2c_device_probe.patch
 	patches.suse/i2c-mux-demux-pinctrl-Fix-an-error-handling-path-in-.patch
 	patches.suse/ALSA-pcm-fix-incorrect-hw_base-increase.patch
 	patches.suse/ALSA-iec1712-Initialize-STDSP24-properly-when-using-.patch
