--- a/series.conf
+++ b/series.conf
@@ -23889,6 +23889,7 @@
 	patches.suse/PNFS-fallback-to-MDS-if-no-deviceid-found.patch
 	patches.suse/NFS4-Fix-v4.0-client-state-corruption-when-mount.patch
 	patches.suse/NFS-Fix-a-double-unlock-from-nfs_match-get_client.patch
+	patches.suse/i2c-isch-remove-unnecessary-acpi-h-include.patch
 	patches.suse/i2c-piix4-add-hygon-dhyana-smbus-support.patch
 	patches.suse/rtc-don-t-reference-bogus-function-pointer-in-kdoc.patch
 	patches.suse/rtc-88pm860x-prevent-use-after-free-on-device-remove.patch
