--- a/series.conf
+++ b/series.conf
@@ -27099,6 +27099,7 @@
 	patches.suse/net-packet-tpacket_rcv-do-not-increment-ring-index-o.patch
 	patches.suse/net-memcg-fix-lockdep-splat-in-inet_csk_accept.patch
 	patches.suse/i2c-i801-do-not-add-ich_res_io_smi-for-the-itco_wdt-device.patch
+	patches.suse/i2c-acpi-put-device-when-verifying-client-fails.patch
 	patches.suse/iommu-vt-d-fix-a-bug-in-intel_iommu_iova_to_phys-for-huge-page
 	patches.suse/iommu-dma-fix-msi-reservation-allocation
 	patches.suse/iommu-vt-d-dmar-replace-warn_taint-with-pr_warn-add_taint
