i2c: iproc: Stop advertising support of SMBUS quick cmd (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25124,6 +25124,7 @@
 	patches.suse/ftrace-check-for-empty-hash-and-comment-the-race-with-registering-probes.patch
 	patches.suse/ftrace-check-for-successful-allocation-of-hash.patch
 	patches.suse/i2c-piix4-Fix-port-selection-for-AMD-Family-16h-Mode.patch
+	patches.suse/i2c-iproc-stop-advertising-support-of-smbus-quick-cmd.patch
 	patches.suse/net-fix-skb-use-after-free-in-netpoll.patch
 	patches.suse/tcp-remove-empty-skb-from-write-queue-in-error-cases.patch
 	patches.suse/mld-fix-memory-leak-in-mld_del_delrec.patch
