--- a/series.conf
+++ b/series.conf
@@ -25993,6 +25993,7 @@
 	patches.suse/slcan-Fix-memory-leak-in-error-path.patch
 	patches.suse/ax88172a-fix-information-leak-on-short-answers.patch
 	patches.suse/x86-resctrl-fix-potential-lockdep-warning.patch
+	patches.suse/i2c-acpi-force-bus-speed-to-400khz-if-a-silead-touchscreen-is-present.patch
 	patches.suse/iommu-vt-d-fix-qi_dev_iotlb_pfsid-and-qi_dev_eiotlb_pfsid-macros
 	patches.suse/gpiolib-acpi-Add-Terra-Pad-1061-to-the-run_edge_even.patch
 	patches.suse/net-mlx4_en-fix-mlx4-ethtool-N-insertion.patch
