HID: i2c-hid: override HID descriptors for certain devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -20350,6 +20350,7 @@
 	patches.suse/mfd-max8997-Enale-irq-wakeup-unconditionally.patch
 	patches.suse/backlight-lm3639-Unconditionally-call-led_classdev_u.patch
 	patches.suse/HID-wacom-Work-around-HID-descriptor-bug-in-DTK-2451.patch
+	patches.suse/hid-i2c-hid-override-hid-descriptors-for-certain-devices.patch
 	patches.suse/power-supply-sysfs-ratelimit-property-read-error-mes.patch
 	patches.suse/power-supply-ab8500_fg-silence-uninitialized-variabl.patch
 	patches.suse/power-reset-at91-poweroff-do-not-procede-if-at91_shd.patch
