--- a/series.conf
+++ b/series.conf
@@ -27553,6 +27553,7 @@
 	patches.suse/Input-synaptics-rmi4-really-fix-attn_data-use-after-.patch
 	patches.suse/ALSA-hwdep-fix-a-left-shifting-1-by-31-UB-bug.patch
 	patches.suse/ALSA-usb-audio-mixer-volume-quirk-for-ESS-Technology.patch
+	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC287.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
