--- a/series.conf
+++ b/series.conf
@@ -27551,6 +27551,7 @@
 	patches.suse/mei-release-me_cl-object-reference.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
 	patches.suse/Input-synaptics-rmi4-really-fix-attn_data-use-after-.patch
+	patches.suse/ALSA-hwdep-fix-a-left-shifting-1-by-31-UB-bug.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
