--- a/series.conf
+++ b/series.conf
@@ -53739,6 +53739,7 @@
 	patches.suse/0002-drm-etnaviv-fix-perfmon-domain-interation.patch
 	patches.suse/scsi-qla2xxx-Do-not-log-message-when-reading-port-sp.patch
 	patches.suse/x86-unwind-orc-fix-unwind_get_return_address_ptr-for-inactive-tasks.patch
+	patches.suse/ALSA-usb-audio-Quirks-for-Gigabyte-TRX40-Aorus-Maste.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Maintain-atomic-consistency-of-queue_claim.patch
