--- a/series.conf
+++ b/series.conf
@@ -26003,6 +26003,7 @@
 	patches.suse/blk-mq-avoid-sysfs-buffer-overflow-with-too-many-CPU.patch
 	patches.suse/blk-mq-make-sure-that-line-break-can-be-printed.patch
 	patches.suse/0007-md-raid0-Fix-an-error-message-in-raid0_make_request.patch
+	patches.suse/md-improve-handling-of-bio-with-REQ_PREFLUSH-in-md_f.patch
 	patches.suse/loop-fix-no-unmap-write-zeroes-request-behavior.patch
 	patches.suse/md-raid10-prevent-access-of-uninitialized-resync_pag.patch
 	patches.suse/nbd-prevent-memory-leak.patch
