blacklist.conf: add some non-needed commits
Mostly just cosmetic changes which won't affect SLE in any important way.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1548,3 +1548,8 @@ c7fc46fd1410a7452db29ee8cd1f85c233000ec9 # kABI, the point is removing a global 
 9d82973e032e246ff5663c9805fbb5407ae932e3 # gcc10 warning fix, likely breaks kABI
 73aca179d78eaa11604ba0783a6d8b2125fbc332 # not changing vermagic in released product
 81d30225bc0c246b53270eb90b23cfbb941a186d # breaks kABI and is a not-really-needed cleanup
+e64e4018d572710c44f42c923d4ac059f0a23320 # Cosmetic change - not needed.
+38a2204f5298620e8a1c3b1dc7b831425106dbc0 # Kconfig change - not needed.
+474c4f306eefbb21b67ebd1de802d005c7d7ecdc # Kconfig change - not needed.
+364d5814b9dd40f6219e7673466c2e18becd62ca # Cosmetic change - not needed.
+efe57fd58e1cb77f9186152ee12a8aa4ae3348e0 # Cosmetic change - not needed.
