kabi for for md: improve handling of bio with REQ_PREFLUSH in md_flush_request() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28412,6 +28412,8 @@
 	patches.kabi/ptp_clock-kABI-workaround.patch
 	patches.kabi/kABI-fix-for-early-XHCI-debug.patch
 
+	patches.kabi/md-improve-handling-of-bio-with-REQ_PREFLUSH-in-md_f.kabi
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
