--- a/series.conf
+++ b/series.conf
@@ -27121,6 +27121,7 @@
 	patches.suse/intel_th-Fix-user-visible-error-codes.patch
 	patches.suse/intel_th-pci-Add-Elkhart-Lake-CPU-support.patch
 	patches.suse/x86-mm-split-vmalloc_sync_all.patch
+	patches.suse/btrfs-fix-log-context-list-corruption-after-rename-w.patch
 	patches.suse/net_sched-keep-alloc_hash-updated-after-hash-allocat.patch
 	patches.suse/hsr-use-rcu_read_lock-in-hsr_get_node_-list-status.patch
 	patches.suse/hsr-add-restart-routine-into-hsr_get_node_list.patch
