btrfs: fix partial loss of prealloc extent past i_size after fsync (bsc#1172343).

--- a/series.conf
+++ b/series.conf
@@ -27487,6 +27487,7 @@
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 	patches.suse/nfs-Fix-potential-posix_acl-refcnt-leak-in-nfs3_set_.patch
 	patches.suse/iommu-amd-fix-legacy-interrupt-remapping-for-x2apic-enabled-system
+	patches.suse/btrfs-fix-partial-loss-of-prealloc-extent-past-i_siz.patch
 	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
 	patches.suse/HID-multitouch-add-eGalaxTouch-P80H84-support.patch
 	patches.suse/platform-x86-asus-nb-wmi-Do-not-load-on-Asus-T100TA-.patch
