blacklist.conf: bpf: non-critical (bsc#1172344)

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -738,6 +738,7 @@ ab95477e7cb35557ecfc837687007b646bab9a9f # bpf: inapplicable
 5731a879d03bdaa00265f8ebc32dfd0e65d25276 # bpf: inapplicable
 be95a845cc4402272994ce290e3ad928aff06cb9 # bpf: inapplicable
 2120fca0ecfb4552d27608d409ebd3403ce02ce4 # bpf: inapplicable
+0ebeea8ca8a4d1d453ad299aef0507dab04f6e8d # bpf: non-critical; depends on 6ae08ae3dea2 ("bpf: Add probe_read_{user, kernel} and probe_read_{user,kernel}_str helpers"); has effect only on s390 where are overlapping address spaces; in the worst case, the read might read a garbage when calling with userspace address
 c9b3bce18da4a0aebc27853052dea39aa64b7d75 # can: inapplicable
 54e4a0c486041dc1c20593d997fafd67089e8408 # can: inapplicable
 dc32b5c3e6e2ef29cef76d9ce1b92d394446150e # capabilities: inapplicable
