--- a/series.conf
+++ b/series.conf
@@ -27555,6 +27555,7 @@
 	patches.suse/ALSA-hwdep-fix-a-left-shifting-1-by-31-UB-bug.patch
 	patches.suse/ALSA-usb-audio-mixer-volume-quirk-for-ESS-Technology.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC287.patch
+	patches.suse/drivers-net-ibmvnic-Update-VNIC-protocol-version-rep.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
