s390/ism: fix error return code in ism_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53727,6 +53727,7 @@
 	patches.suse/ALSA-hda-realtek-Add-COEF-workaround-for-ASUS-ZenBoo.patch
 	patches.suse/ALSA-hda-realtek-Limit-int-mic-boost-for-Thinkpad-T5.patch
 	patches.suse/bpf-Fix-sk_psock-refcnt-leak-when-receiving-message.patch
+	patches.suse/s390-ism-fix-error-return-code-in-ism_probe
 	patches.suse/pinctrl-sunrisepoint-Fix-PAD-lock-register-offset-fo.patch
 	patches.suse/pinctrl-baytrail-Enable-pin-configuration-setting-fo.patch
 	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
