--- a/series.conf
+++ b/series.conf
@@ -28054,6 +28054,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
 	patches.suse/ALSA-rawmidi-Fix-racy-buffer-resize-under-concurrent.patch
 	patches.suse/ALSA-hda-realtek-Limit-int-mic-boost-for-Thinkpad-T5.patch
+	patches.suse/s390-ism-fix-error-return-code-in-ism_probe
 	patches.suse/pinctrl-baytrail-Enable-pin-configuration-setting-fo.patch
 	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
 	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
