--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1530,3 +1530,4 @@ c7fc46fd1410a7452db29ee8cd1f85c233000ec9 # kABI, the point is removing a global 
 9a7f12edf8848a9b355a86fc0183d7be932ef11e # cleanup
 a6aacb2b26e85aa619cf0c6f98d0ca77314cd2a1 # no changes: drm/amdgpu: force fbdev into vram
 f058599e22d59e594e5aae1dc10560568d8f4a8b # depends on 0aaba41b58bc5f3074c0c0a6136b9500b5e29e19, which cannot be backported
+34b13cb3eaa5ad205f4497da6420262da4940b9e # wrong fixes tag
