ixgbe: don't check firmware errors (bsc#1170284).

--- a/series.conf
+++ b/series.conf
@@ -53779,6 +53779,7 @@
 	patches.suse/MM-replace-PF_LESS_THROTTLE-with-PF_LOCAL_THROTTLE.patch
 	patches.suse/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work.patch
 	patches.kabi/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work-kabi.patch
+	patches.suse/bsc1170284-ixgbe_dont_check_firmware_errors.patch
 
 	########################################################
 	# end of sorted patches
