--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1555,3 +1555,6 @@ e64e4018d572710c44f42c923d4ac059f0a23320 # Cosmetic change - not needed.
 364d5814b9dd40f6219e7673466c2e18becd62ca # Cosmetic change - not needed.
 efe57fd58e1cb77f9186152ee12a8aa4ae3348e0 # Cosmetic change - not needed.
 34719de919af07682861cb0fa2bcf64da33ecf44 # cannot change to module
+9ee3e06610fdb8a601cde59c92089fb6c1deb4aa # requires renaming files/kernel module names
+b59dfdaef173677b0b7e10f375226c0a1114fd20 # Not required, needs 9ee3e06610f
+09f3dbe474735df13dd8a66d3d1231048d9b373f # Not required, needs 9ee3e06610f
