spi: bcm2835: Fix 3-wire mode if DMA is enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -24921,6 +24921,7 @@
 	patches.suse/coredump-split-pipe-command-whitespace-before-expand.patch
 	patches.suse/mm-migrate-c-initialize-pud_entry-in-migrate_vma.patch
 	patches.suse/eeprom-at24-make-spd-world-readable-again.patch
+	patches.suse/spi-bcm2835-fix-3-wire-mode-if-dma-is-enabled.patch
 	patches.suse/0001-x86-speculation-Prepare-entry-code-for-Spectre-v1-sw.patch
 	patches.suse/0002-x86-speculation-Enable-Spectre-v1-swapgs-mitigations.patch
 	patches.suse/x86-speculation-swapgs-exclude-ATOMs-from-speculating-through-SWAPGS.patch
