spi: spi-s3c64xx: Fix system resume support (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16852,6 +16852,7 @@
 	patches.suse/hwmon-asus_atk0110-Replace-deprecated-device-registe
 	patches.suse/spi-bcm63xx-hspi-Enable-the-clock-before-calling-clk
 	patches.suse/spi-pxa2xx-check-clk_prepare_enable-return-value
+	patches.suse/spi-spi-s3c64xx-fix-system-resume-support.patch
 	patches.suse/cifs_lookup-cifs_get_inode_-never-returns-0-with-inode-left.patch
 	patches.suse/cifs_lookup-switch-to-d_splice_alias-.patch
 	patches.suse/btrfs-remove-wrong-use-of-volume_mutex-from-btrfs_dev_replace_start.patch
