--- a/series.conf
+++ b/series.conf
@@ -20109,6 +20109,7 @@
 	patches.suse/hwmon-ina3221-Fix-INA3221_CONFIG_MODE-macros.patch
 	patches.suse/hwmon-pmbus-Fix-page-count-auto-detection.patch
 	patches.suse/jffs2-free-jffs2_sb_info-through-jffs2_kill_sb.patch
+	patches.suse/mtd-spi-nor-fsl-quadspi-don-t-let-einval-on-the-bus.patch
 	patches.suse/mtd-spi-nor-fsl-quadspi-fix-read-error-for-flash-siz.patch
 	patches.suse/spi-bcm-qspi-switch-back-to-reading-flash-using-smal.patch
 	patches.suse/spi-rockchip-initialize-dma_slave_config-properly.patch
