spi: spi-fsl-dspi: Replace interruptible wait queue with a simple completion (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27189,6 +27189,7 @@
 	patches.suse/staging-rtl8188eu-Add-ASUS-USB-N10-Nano-B1-to-device.patch
 	patches.suse/staging-wlan-ng-fix-ODEBUG-bug-in-prism2sta_disconne.patch
 	patches.suse/staging-wlan-ng-fix-use-after-free-Read-in-hfa384x_u.patch
+	patches.suse/spi-spi-fsl-dspi-replace-interruptible-wait-queue-with-a-simple-completion.patch
 	patches.suse/acpi-x86-ignore-unspecified-bit-positions-in-the-ACP.patch
 	patches.suse/objtool-add-is_static_jump-helper.patch
 	patches.suse/objtool-add-relocation-check-for-alternative-sections.patch
