--- a/series.conf
+++ b/series.conf
@@ -27570,6 +27570,7 @@
 	patches.suse/ALSA-hwdep-fix-a-left-shifting-1-by-31-UB-bug.patch
 	patches.suse/ALSA-usb-audio-mixer-volume-quirk-for-ESS-Technology.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC287.patch
+	patches.suse/iommu-fix-reference-count-leak-in-iommu_group_alloc
 	patches.suse/drivers-net-ibmvnic-Update-VNIC-protocol-version-rep.patch
 
 	# dhowells/linux-fs keys-uefi
