spi: fsl: use platform_get_irq() instead of of_irq_to_resource() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26428,6 +26428,7 @@
 	patches.suse/scsi-iscsi-fix-a-potential-deadlock-in-the-timeout-handler
 	patches.suse/scsi-iscsi-avoid-potential-deadlock-in-iscsi_if_rx-func
 	patches.suse/spi-fsl-don-t-map-irq-during-probe.patch
+	patches.suse/spi-fsl-use-platform_get_irq-instead-of-of_irq_to_resource.patch
 	patches.suse/regulator-rn5t618-fix-module-aliases.patch
 	patches.suse/btrfs-do-not-call-synchronize_srcu-in-inode_tree_del.patch
 	patches.suse/btrfs-don-t-double-lock-the-subvol_sem-for-rename-exchange.patch
