perf/core: Fix group scheduling with mixed hw and sw events (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31045,6 +31045,7 @@
 	patches.suse/srcu-Add-cleanup_srcu_struct_quiesced.patch
 	patches.suse/nvme-Avoid-flush-dependency-in-delete-controller-flo.patch
 	patches.suse/tools-include-compiler-gcc-Add-__pure-attribute-help.patch
+	patches.suse/perf-core-fix-group-scheduling-with-mixed-hw-and-sw-events.patch
 	patches.suse/perf-core-fix-bad-use-of-igrab.patch
 	patches.suse/perf-x86-store-user-space-frame-pointer-value-on-a-sample.patch
 	patches.suse/perf-x86-intel-uncore-introduce-customized-event_read-for-client-imc-uncore.patch
