--- a/series.conf
+++ b/series.conf
@@ -11346,6 +11346,7 @@
 	patches.suse/drm-i915-Read-timings-from-the-correct-transcoder-in
 	patches.suse/drm-i915-bios-parse-DDI-ports-also-for-CHV-for-HDMI-
 	patches.suse/objtool-Upgrade-libelf-devel-warning-to-error-for-CO.patch
+	patches.suse/perf-core-avoid-freeing-static-pmu-contexts-when-pmu-is-unregistered.patch
 	patches.suse/perf-x86-intel-uncore-fix-memory-leaks-on-allocation-failures.patch
 	patches.suse/tools-include-uapi-bpf.h-Sync-kernel-ABI-header-with.patch
 	patches.suse/sched-core-Fix-wake_affine-performance-regression.patch
