perf/core: Force USER_DS when recording user stack data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -40372,6 +40372,7 @@
 	patches.suse/CIFS-fix-wrapping-bugs-in-num_entries.patch
 	patches.suse/cifs-integer-overflow-in-in-SMB2_ioctl.patch
 	patches.suse/cifs-read-overflow-in-is_valid_oplock_break-.patch
+	patches.suse/perf-core-force-user_ds-when-recording-user-stack-data.patch
 	patches.suse/sched-fair-Fix-vruntime_normalized-for-remote-non-migration-wakeup.patch
 	patches.suse/x86-eisa-don-t-probe-eisa-bus-for-xen-pv-guests
 	patches.suse/ext4-check-to-make-sure-the-rename-2-s-destination-i.patch
